--- a/package.json
+++ b/package.json
@@ -2,47 +2,45 @@
   "name": "miniaiapps",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "node scripts/test.js"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@vercel/analytics": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.487.0",
-    "next": "^15.2.5",
+    "@supabase/supabase-js": "^2.39.7",
+    "@vercel/analytics": "^1.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.0",
     "next-themes": "^0.4.6",
     "openai": "^4.26.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "resend": "^3.0.0",
-    "stripe": "^14.14.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "sonner": "^1.4.3",
+    "stripe": "^14.17.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@supabase/supabase-js": "^2.39.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "chalk": "^4.1.2",
-    "dotenv": "^16.4.7",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "node-fetch": "^2.7.0",
-    "postcss": "^8"
+    "postcss": "^8.5.3",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5"
   }
 }
