--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "miniaiapps",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "@vercel/analytics": "^1.1.3",
     "class-variance-authority": "^0.7.0",
@@ -21,10 +25,10 @@
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
-    "next-themes": "^0.4.6",
-    "openai": "^4.26.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next-themes": "^0.2.1",
+    "openai": "^4.28.0",
+    "react": "^18",
+    "react-dom": "^18",
     "resend": "^3.0.0",
     "sonner": "^1.7.4",
     "stripe": "^14.17.0",
@@ -32,17 +36,20 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1",
-    "tailwindcss": "^4.1.3",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
+    "postcss": "^8",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.0.2",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
